<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_routes">

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.youstinus.dviratelietuva.ui.routes.RoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" >
        <action
            android:id="@+id/action_navigation_routes_to_navigation_route"
            app:destination="@id/navigation_route"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left"
            app:popEnterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/fui_slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.youstinus.dviratelietuva.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.youstinus.dviratelietuva.ui.info.InfoFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_info" />


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.youstinus.dviratelietuva.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.youstinus.dviratelietuva.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.youstinus.dviratelietuva.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.youstinus.dviratelietuva.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_route"
        android:name="com.youstinus.dviratelietuva.ui.routes.route.RouteFragment"
        android:label="@string/title_route"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/navigation_create_route"
        android:name="com.youstinus.dviratelietuva.ui.routes.createroute.CreateRouteFragment"
        android:label="@string/title_create_route"
        tools:layout="@layout/fragment_create_route" />

</navigation>