<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />-->

    <item
        android:id="@+id/navigation_routes"
        android:icon="@drawable/ic_routes"
        android:title="@string/title_routes" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

<!--    <item-->
<!--        android:id="@+id/navigation_route"-->
<!--        android:title="TODO"-->
<!--        android:visible="false"/>-->

    <!--<item
        android:id="@+id/navigation_create_route"
        android:icon="@drawable/ic_routes"
        android:title="@string/title_create_route" />-->

    <!--<item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />-->

    <!--<item            android:id="@+id/navigation_upload"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_upload" />-->

    <!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

</menu>
